tests/fail/test4.tds
/*
Este test falla, se intenta declarar la variable y despues de una asignacion
*/
integer inc(integer x, bool s){
    return x + 1;
}
extern integer get_int();

extern void print_int(integer i);

integer main(){
    y = 1;
    integer y;
}